# dsa

./: README.md  pyproject.toml
algoritham_thinking_with_python/easy/: deepest_node_tree.py  delete_tree.py  find_dept_tree.py  find_size_tree.py  find_value_tree.py  max_leaf_paths_tree.py  path_sum.py  recursive_tree.py  reverse_order_print_tree.py  tree_inorder.py  tree_level_order.py  tree_min.py  tree_postorder.py  tree_preorder_traversal.py  tree_structure.py  tree_sum.py
ctci/: one_away.py  palindrome_permutation.py  rotate_matrix.py  string_compression.py
hackerrank/: is_binary_tree.py
hackerrank/easy/: height_binary_tree.py  lca_binary_tree.py
leetcode_solutions/: new.py
leetcode_solutions/daily_challenges/: 118_pascals_triangle.py
leetcode_solutions/easy/: 101_symmatic_tree.py  141_linked_list_cycle.py  1710_maximum_units_of_truck.py  203_remove_linked_list_elements.py  206_reverse_linked_list.py  21_merge_sorted_linked_list.py  21_merge_two_sorted_lists.py  234_palindrome_linked_list.py  238_odd_even_linked_list.py  6097_match_substring.py  83_remove_duplicates_linked_list.py  best_time_by_stock.py  binary_search.py  caclulate_amount.py  contains_duplicate.py  fabonacci_seq.py  fair_dstribution.py  first_Bad_version.py  first_unique_char.py  intersection_two_array.py  linked_list.py  linked_list_prac.py  longest_common_prefix.py  maximum_subarray.py  merge_sorted_array.py  middle_of_linked_list.py  move_zeros.py  ransom_note.py  reshape_matrix.py  reverse_string.py  reverse_words_string_3.py  rotate_array.py  search_insert_position.py  two_sum.py  (+2 more)
(+25 files in other folders)
